# keyboard-trigger

./: README.md  pyproject.toml
src/keyboard_trigger/: __init__.py  core.py
tests/: example.py
